--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,5 +70,8 @@ dependencies {
 
     //圆形图
     compile 'de.hdodenhof:circleimageview:2.1.0'
+
+    //腾讯bugly
+    compile 'com.tencent.bugly:crashreport:2.2.0'
 }
 
