--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
+
     <application
         android:name=".base.BaseApplication"
         android:allowBackup="true"
@@ -16,7 +21,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
 
-        android:theme="@style/AppTheme">
+        android:theme="@style/TransparencyAppTheme">
         <activity
             android:name=".ui.activity.MainActivity"
             android:screenOrientation="portrait"
@@ -43,6 +48,21 @@
         <activity
             android:name=".ui.activity.PersonIconActivity"
             android:screenOrientation="portrait"/>
+
+
+
+
+        <!--版本更新所要用到的 fileProvider 用于兼容7.0通知栏的安装 和图片选择以及拍照裁剪-->
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <!--元数据-->
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_provider_paths"/>
+        </provider>
     </application>
 
 </manifest>
